<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
                android:padding="10dp"
    
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView3"
        android:layout_toRightOf="@+id/imageView3"
        android:src="@drawable/silent" 
        />

    <Button
        android:id="@+id/buttonGot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="62dp"
        android:background="@drawable/rounded_button"
        android:padding="15dp"
        android:text="@string/gotit"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:typeface="serif" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:src="@drawable/vibrate" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignLeft="@+id/textView1"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="24dp"
        android:src="@drawable/normal" />

    <TextView
        android:id="@+id/textView1"
        style="@style/Header.SubTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonGot"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="58dp"
        android:fontFamily="serif"
        android:gravity="center_horizontal"
        android:text="@string/layoutthree"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#2a2a2a" 
           android:textSize="25dp"
        />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonGot"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_marginBottom="17dp"
        android:text="@string/dontshow" 
        android:textColor="#a8a8a8" 
        
        />

</RelativeLayout>